--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-﻿
+<!doctype html>
+<html lang="it">
+<head>
+<title>Ciao Mondo!</title>
+</head>
+<body>
+<h1>Ciao Mondo!</h1>
+<p>Questa è la nostra prima pagina HTML!</p>
+<img src="immagine.jpg">
+</body>
+</html>
